--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -35,6 +35,11 @@
     font-family: inherit;
   }
   
+  a {
+    text-decoration: none;
+    color: black;
+  }
+
   ol,
   ul {
     list-style: none;
