--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,45 @@
 :root {
     --main-color: #e98074;
+    --second-color: #e85a4f;
     --text-color: #8e8d8a;
-    --second-color: #eae7dc;
+    --third-color: #eae7dc;
 }
 
 body {
-    background-color: var(--second-color);
+    background-color: var(--third-color);
 }
 
 h1 {
-    font-size: ;
+    font-size: 50px ;
+    color: var(--second-color);
+    text-align: center;
+    margin-bottom: 30px;
 }
+
+p {
+    font-size: 20px;
+    color: var(--text-color);
+    text-align: center;
+}
+
+button {
+    padding: 10px;
+    color: var(--third-color);
+    background-color: var(--main-color);
+    border-radius: 10px;
+} 
+
+#view-high {
+    margin-left: 3%;
+    line-height: 100px;
+}
+
+.title {
+    margin-top: 350px;
+}
+
+#start {
+    margin-left: 50%;
+    margin-top: 30px;
+}
+
