--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,12 +34,12 @@ button {
     line-height: 100px;
 }
 
-.title {
-    margin-top: 350px;
+.title-screen {
+    margin-top: 250px;
 }
 
 #start {
-    margin-left: 50%;
+    margin-left: 48%;
     margin-top: 30px;
 }
 
