--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,24 @@ h1 {
     margin-bottom: 30px;
 }
 
+h2 {
+    font-size: 40px;
+    color: var(--second-color);
+    text-align: center;
+    margin-bottom: 30px;
+}
+
 p {
     font-size: 20px;
     color: var(--text-color);
     text-align: center;
+}
+
+li {
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    
 }
 
 button {
@@ -42,4 +56,9 @@ button {
     margin-left: 48%;
     margin-top: 30px;
 }
+
+.questions-screen {
+    margin-top: 150px;
+}
+
 
