--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,17 +48,15 @@ button {
     line-height: 100px;
 }
 
-.title-screen {
+.title-screen, .questions-screen {
     margin-top: 250px;
 }
 
 #start-Button {
     margin-left: 48%;
-    margin-top: 30px;
+    margin-top: 40px;
 }
 
-.questions-screen {
-    margin-top: 150px;
-}
+ 
 
 
